# MLOPS_LAB11

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  HOMEWORK.md  LAB_INSTRUCTION.md  RAPORT.md  README.md  download_and_export.py  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml
sentiment_app/: app.py
src/scripts/: __init__.py  download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py
tests/: test_app.py
